# notion-to-google-calendar-synchronizaton

./: .env.example  .gitignore  LICENSE  README.md  example.py  notion2gcalendar.py  requirements.txt  setup.cfg
src/: notion2gcalendar.py
