[metadata]
name = notion2googlecalendar
version = 0.1
author = Halil Said Cankurtaran
author_email = hsaidcankurtaran@gmail.com
description = A package to synchronize Notion tasks with Google Calendar
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hsaidc/notion-to-google-calendar-synchronizaton
project_urls =
    Bug Tracker = https://github.com/hsaidc/notion-to-google-calendar-synchronizaton/-/issues
    repository = https://github.com/hsaidc/notion-to-google-calendar-synchronizaton
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
install_requires =
    cachetools == 5.3.3
    certifi == 2024.2.2
    charset-normalizer == 3.3.2
    google-api-core == 2.17.1
    google-api-python-client == 2.119.0
    google-auth == 2.28.1
    google-auth-httplib2 == 0.2.0
    googleapis-common-protos == 1.62.0
    httplib2 == 0.22.0
    idna == 3.6
    protobuf == 5.29.6
    pyasn1 == 0.5.1
    pyasn1-modules == 0.3.0
    pyparsing == 3.1.1
    uritemplate == 4.1.1
    requests == 2.31.0
    rsa == 4.9
    urllib3 == 2.2.1
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src